parser.output
Terminals unused in grammar

   ENDOFFILE
   T_INV


Grammar

    0 $accept: programa $end

    1 programa: listaDec

    2 listaDec: dec
    3         | listaDec dec

    4 dec: decVar
    5    | decSub
    6    | error

    7 decVar: VAR listaSpecVars ':' type ';'
    8       | error ';'
    9       | VAR listaSpecVars ':' error ';'

   10 decSub: decProc
   11       | decFunc

   12 listaSpecVars: specVar
   13              | listaSpecVars ',' specVar
   14              | listaSpecVars specVar

   15 specVar: specVarSimples
   16        | specVarSimplesIni
   17        | specVarArranjo
   18        | specVarArranjoIni

   19 specVarSimples: ID
   20               | error

   21 specVarSimplesIni: ID '=' Exp
   22                  | ID '=' error
   23                  | error '=' Exp

   24 specVarArranjo: ID '[' NUMBER ']'
   25               | ID '[' error ']'
   26               | error '[' NUMBER ']'

   27 specVarArranjoIni: ID '[' NUMBER ']' '=' '{' listaExp '}'
   28                  | ID '[' error ']' '=' '{' listaExp '}'
   29                  | error '[' NUMBER ']' '=' '{' listaExp '}'
   30                  | ID '[' NUMBER ']' '=' '{' error '}'

   31 listaExp: Exp
   32         | listaExp ',' Exp

   33 variavel: ID
   34         | ID '[' Exp ']'

   35 Exp: variavel
   36    | NUMBER
   37    | TRUE
   38    | FALSE
   39    | STRING
   40    | Exp '+' Exp
   41    | Exp '-' Exp
   42    | Exp '*' Exp
   43    | Exp '/' Exp
   44    | Exp '%' Exp
   45    | '-' Exp
   46    | '!' Exp
   47    | '(' Exp ')'
   48    | Exp '?' Exp ':' Exp
   49    | Exp '<' Exp
   50    | Exp "<=" Exp
   51    | Exp '>' Exp
   52    | Exp ">=" Exp
   53    | Exp "==" Exp
   54    | Exp "!=" Exp
   55    | Exp "&&" Exp
   56    | Exp "||" Exp
   57    | cmdChamadaFunc

   58 decProc: DEF ID '(' ')' bloco
   59        | DEF ID '(' listaParam ')' bloco
   60        | DEF ID '(' error ')' bloco

   61 decFunc: DEF ID '(' ')' ':' type bloco
   62        | DEF ID '(' listaParam ')' ':' type bloco
   63        | DEF ID '(' error ')' type bloco

   64 listaParam: specParams
   65           | listaParam ';' specParams

   66 specParams: listaParams ':' type

   67 listaParams: param
   68            | listaParams ',' param

   69 param: ID
   70      | ID '[' ']'

   71 bloco: '{' listaDec listaCmd '}'
   72      | '{' listaDec '}'
   73      | '{' listaCmd '}'
   74      | '{' '}'

   75 listaCmd: cmd
   76         | listaCmd cmd

   77 cmd: cmdSimples
   78    | bloco

   79 cmdSimples: cmdAtrib
   80           | cmdIf
   81           | cmdWhile
   82           | cmdFor
   83           | cmdStop
   84           | cmdSkip
   85           | cmdReturn
   86           | cmdChamadaProc
   87           | cmdRead
   88           | cmdWrite

   89 cmdAtrib: atrib ';'

   90 atrib: variavel '=' Exp
   91      | variavel "+=" Exp
   92      | variavel "-=" Exp
   93      | variavel "*=" Exp
   94      | variavel "/=" Exp
   95      | variavel "%=" Exp

   96 cmdIf: IF '(' Exp ')' cmd
   97      | IF '(' Exp ')' cmd ELSE cmd
   98      | IF '(' error ')' cmd
   99      | IF '(' error ')' cmd ELSE cmd

  100 cmdWhile: WHILE '(' Exp ')' cmd
  101         | WHILE '(' error ')' cmd

  102 cmdFor: FOR '(' atrib ';' Exp ';' atrib ')' cmd
  103       | FOR '(' error ')' cmd

  104 cmdStop: STOP ';'

  105 cmdSkip: SKIP ';'

  106 cmdReturn: RETURN ';'
  107          | RETURN Exp ';'

  108 cmdChamadaProc: ID '(' ')' ';'
  109               | ID '(' listaExp ')' ';'

  110 cmdChamadaFunc: ID '(' ')'
  111               | ID '(' listaExp ')'

  112 cmdRead: READ variavel ';'

  113 cmdWrite: WRITE listaExp ';'

  114 type: INT
  115     | STRING_TYPE
  116     | BOOL
  117     | STRING_TYPE '[' NUMBER ']'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 46
'%' (37) 44
'(' (40) 47 58 59 60 61 62 63 96 97 98 99 100 101 102 103 108 109 110
    111
')' (41) 47 58 59 60 61 62 63 96 97 98 99 100 101 102 103 108 109 110
    111
'*' (42) 42
'+' (43) 40
',' (44) 13 32 68
'-' (45) 41 45
'/' (47) 43
':' (58) 7 9 48 61 62 66
';' (59) 7 8 9 65 89 102 104 105 106 107 108 109 112 113
'<' (60) 49
'=' (61) 21 22 23 27 28 29 30 90
'>' (62) 51
'?' (63) 48
'[' (91) 24 25 26 27 28 29 30 34 70 117
']' (93) 24 25 26 27 28 29 30 34 70 117
'{' (123) 27 28 29 30 71 72 73 74
'}' (125) 27 28 29 30 71 72 73 74
error (256) 6 8 9 20 22 23 25 26 28 29 30 60 63 98 99 101 103
"+=" (258) 91
"-=" (259) 92
"*=" (260) 93
"/=" (261) 94
"%=" (262) 95
"||" (263) 56
"&&" (264) 55
"==" (265) 53
"!=" (266) 54
"<=" (267) 50
">=" (268) 52
NEG (269)
NUMBER (270) 24 26 27 29 30 36 117
WHILE (271) 100 101
VAR (272) 7 9
DEF (273) 58 59 60 61 62 63
INT (274) 114
BOOL (275) 116
FOR (276) 102 103
IF (277) 96 97 98 99
"then" (278)
ELSE (279) 97 99
WRITE (280) 113
READ (281) 112
STRING_TYPE (282) 115 117
STRING (283) 39
ID (284) 19 21 22 24 25 27 28 30 33 34 58 59 60 61 62 63 69 70 108
    109 110 111
TRUE (285) 37
FALSE (286) 38
RETURN (287) 106 107
SKIP (288) 105
STOP (289) 104
ENDOFFILE (290)
T_INV (291)


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
programa (57)
    on left: 1, on right: 0
listaDec (58)
    on left: 2 3, on right: 1 3 71 72
dec (59)
    on left: 4 5 6, on right: 2 3
decVar (60)
    on left: 7 8 9, on right: 4
decSub (61)
    on left: 10 11, on right: 5
listaSpecVars (62)
    on left: 12 13 14, on right: 7 9 13 14
specVar (63)
    on left: 15 16 17 18, on right: 12 13 14
specVarSimples (64)
    on left: 19 20, on right: 15
specVarSimplesIni (65)
    on left: 21 22 23, on right: 16
specVarArranjo (66)
    on left: 24 25 26, on right: 17
specVarArranjoIni (67)
    on left: 27 28 29 30, on right: 18
listaExp (68)
    on left: 31 32, on right: 27 28 29 32 109 111 113
variavel (69)
    on left: 33 34, on right: 35 90 91 92 93 94 95 112
Exp (70)
    on left: 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52
    53 54 55 56 57, on right: 21 23 31 32 34 40 41 42 43 44 45 46 47
    48 49 50 51 52 53 54 55 56 90 91 92 93 94 95 96 97 100 102 107
decProc (71)
    on left: 58 59 60, on right: 10
decFunc (72)
    on left: 61 62 63, on right: 11
listaParam (73)
    on left: 64 65, on right: 59 62 65
specParams (74)
    on left: 66, on right: 64 65
listaParams (75)
    on left: 67 68, on right: 66 68
param (76)
    on left: 69 70, on right: 67 68
bloco (77)
    on left: 71 72 73 74, on right: 58 59 60 61 62 63 78
listaCmd (78)
    on left: 75 76, on right: 71 73 76
cmd (79)
    on left: 77 78, on right: 75 76 96 97 98 99 100 101 102 103
cmdSimples (80)
    on left: 79 80 81 82 83 84 85 86 87 88, on right: 77
cmdAtrib (81)
    on left: 89, on right: 79
atrib (82)
    on left: 90 91 92 93 94 95, on right: 89 102
cmdIf (83)
    on left: 96 97 98 99, on right: 80
cmdWhile (84)
    on left: 100 101, on right: 81
cmdFor (85)
    on left: 102 103, on right: 82
cmdStop (86)
    on left: 104, on right: 83
cmdSkip (87)
    on left: 105, on right: 84
cmdReturn (88)
    on left: 106 107, on right: 85
cmdChamadaProc (89)
    on left: 108 109, on right: 86
cmdChamadaFunc (90)
    on left: 110 111, on right: 57
cmdRead (91)
    on left: 112, on right: 87
cmdWrite (92)
    on left: 113, on right: 88
type (93)
    on left: 114 115 116 117, on right: 7 61 62 63 66


State 0

    0 $accept: . programa $end

    error  shift, and go to state 1
    VAR    shift, and go to state 2
    DEF    shift, and go to state 3

    programa  go to state 4
    listaDec  go to state 5
    dec       go to state 6
    decVar    go to state 7
    decSub    go to state 8
    decProc   go to state 9
    decFunc   go to state 10


State 1

    6 dec: error .
    8 decVar: error . ';'

    ';'  shift, and go to state 11

    $default  reduce using rule 6 (dec)


State 2

    7 decVar: VAR . listaSpecVars ':' type ';'
    9       | VAR . listaSpecVars ':' error ';'

    error  shift, and go to state 12
    ID     shift, and go to state 13

    listaSpecVars      go to state 14
    specVar            go to state 15
    specVarSimples     go to state 16
    specVarSimplesIni  go to state 17
    specVarArranjo     go to state 18
    specVarArranjoIni  go to state 19


State 3

   58 decProc: DEF . ID '(' ')' bloco
   59        | DEF . ID '(' listaParam ')' bloco
   60        | DEF . ID '(' error ')' bloco
   61 decFunc: DEF . ID '(' ')' ':' type bloco
   62        | DEF . ID '(' listaParam ')' ':' type bloco
   63        | DEF . ID '(' error ')' type bloco

    ID  shift, and go to state 20


State 4

    0 $accept: programa . $end

    $end  shift, and go to state 21


State 5

    1 programa: listaDec .
    3 listaDec: listaDec . dec

    error  shift, and go to state 1
    VAR    shift, and go to state 2
    DEF    shift, and go to state 3

    $end  reduce using rule 1 (programa)

    dec      go to state 22
    decVar   go to state 7
    decSub   go to state 8
    decProc  go to state 9
    decFunc  go to state 10


State 6

    2 listaDec: dec .

    $default  reduce using rule 2 (listaDec)


State 7

    4 dec: decVar .

    $default  reduce using rule 4 (dec)


State 8

    5 dec: decSub .

    $default  reduce using rule 5 (dec)


State 9

   10 decSub: decProc .

    $default  reduce using rule 10 (decSub)


State 10

   11 decSub: decFunc .

    $default  reduce using rule 11 (decSub)


State 11

    8 decVar: error ';' .

    $default  reduce using rule 8 (decVar)


State 12

   20 specVarSimples: error .
   23 specVarSimplesIni: error . '=' Exp
   26 specVarArranjo: error . '[' NUMBER ']'
   29 specVarArranjoIni: error . '[' NUMBER ']' '=' '{' listaExp '}'

    '['  shift, and go to state 23
    '='  shift, and go to state 24

    $default  reduce using rule 20 (specVarSimples)


State 13

   19 specVarSimples: ID .
   21 specVarSimplesIni: ID . '=' Exp
   22                  | ID . '=' error
   24 specVarArranjo: ID . '[' NUMBER ']'
   25               | ID . '[' error ']'
   27 specVarArranjoIni: ID . '[' NUMBER ']' '=' '{' listaExp '}'
   28                  | ID . '[' error ']' '=' '{' listaExp '}'
   30                  | ID . '[' NUMBER ']' '=' '{' error '}'

    '['  shift, and go to state 25
    '='  shift, and go to state 26

    $default  reduce using rule 19 (specVarSimples)


State 14

    7 decVar: VAR listaSpecVars . ':' type ';'
    9       | VAR listaSpecVars . ':' error ';'
   13 listaSpecVars: listaSpecVars . ',' specVar
   14              | listaSpecVars . specVar

    error  shift, and go to state 12
    ','    shift, and go to state 27
    ':'    shift, and go to state 28
    ID     shift, and go to state 13

    specVar            go to state 29
    specVarSimples     go to state 16
    specVarSimplesIni  go to state 17
    specVarArranjo     go to state 18
    specVarArranjoIni  go to state 19


State 15

   12 listaSpecVars: specVar .

    $default  reduce using rule 12 (listaSpecVars)


State 16

   15 specVar: specVarSimples .

    $default  reduce using rule 15 (specVar)


State 17

   16 specVar: specVarSimplesIni .

    $default  reduce using rule 16 (specVar)


State 18

   17 specVar: specVarArranjo .

    $default  reduce using rule 17 (specVar)


State 19

   18 specVar: specVarArranjoIni .

    $default  reduce using rule 18 (specVar)


State 20

   58 decProc: DEF ID . '(' ')' bloco
   59        | DEF ID . '(' listaParam ')' bloco
   60        | DEF ID . '(' error ')' bloco
   61 decFunc: DEF ID . '(' ')' ':' type bloco
   62        | DEF ID . '(' listaParam ')' ':' type bloco
   63        | DEF ID . '(' error ')' type bloco

    '('  shift, and go to state 30


State 21

    0 $accept: programa $end .

    $default  accept


State 22

    3 listaDec: listaDec dec .

    $default  reduce using rule 3 (listaDec)


State 23

   26 specVarArranjo: error '[' . NUMBER ']'
   29 specVarArranjoIni: error '[' . NUMBER ']' '=' '{' listaExp '}'

    NUMBER  shift, and go to state 31


State 24

   23 specVarSimplesIni: error '=' . Exp

    '('     shift, and go to state 32
    '-'     shift, and go to state 33
    '!'     shift, and go to state 34
    NUMBER  shift, and go to state 35
    STRING  shift, and go to state 36
    ID      shift, and go to state 37
    TRUE    shift, and go to state 38
    FALSE   shift, and go to state 39

    variavel        go to state 40
    Exp             go to state 41
    cmdChamadaFunc  go to state 42


State 25

   24 specVarArranjo: ID '[' . NUMBER ']'
   25               | ID '[' . error ']'
   27 specVarArranjoIni: ID '[' . NUMBER ']' '=' '{' listaExp '}'
   28                  | ID '[' . error ']' '=' '{' listaExp '}'
   30                  | ID '[' . NUMBER ']' '=' '{' error '}'

    error   shift, and go to state 43
    NUMBER  shift, and go to state 44


State 26

   21 specVarSimplesIni: ID '=' . Exp
   22                  | ID '=' . error

    error   shift, and go to state 45
    '('     shift, and go to state 32
    '-'     shift, and go to state 33
    '!'     shift, and go to state 34
    NUMBER  shift, and go to state 35
    STRING  shift, and go to state 36
    ID      shift, and go to state 37
    TRUE    shift, and go to state 38
    FALSE   shift, and go to state 39

    variavel        go to state 40
    Exp             go to state 46
    cmdChamadaFunc  go to state 42


State 27

   13 listaSpecVars: listaSpecVars ',' . specVar

    error  shift, and go to state 12
    ID     shift, and go to state 13

    specVar            go to state 47
    specVarSimples     go to state 16
    specVarSimplesIni  go to state 17
    specVarArranjo     go to state 18
    specVarArranjoIni  go to state 19


State 28

    7 decVar: VAR listaSpecVars ':' . type ';'
    9       | VAR listaSpecVars ':' . error ';'

    error        shift, and go to state 48
    INT          shift, and go to state 49
    BOOL         shift, and go to state 50
    STRING_TYPE  shift, and go to state 51

    type  go to state 52


State 29

   14 listaSpecVars: listaSpecVars specVar .

    $default  reduce using rule 14 (listaSpecVars)


State 30

   58 decProc: DEF ID '(' . ')' bloco
   59        | DEF ID '(' . listaParam ')' bloco
   60        | DEF ID '(' . error ')' bloco
   61 decFunc: DEF ID '(' . ')' ':' type bloco
   62        | DEF ID '(' . listaParam ')' ':' type bloco
   63        | DEF ID '(' . error ')' type bloco

    error  shift, and go to state 53
    ')'    shift, and go to state 54
    ID     shift, and go to state 55

    listaParam   go to state 56
    specParams   go to state 57
    listaParams  go to state 58
    param        go to state 59


State 31

   26 specVarArranjo: error '[' NUMBER . ']'
   29 specVarArranjoIni: error '[' NUMBER . ']' '=' '{' listaExp '}'

    ']'  shift, and go to state 60


State 32

   47 Exp: '(' . Exp ')'

    '('     shift, and go to state 32
    '-'     shift, and go to state 33
    '!'     shift, and go to state 34
    NUMBER  shift, and go to state 35
    STRING  shift, and go to state 36
    ID      shift, and go to state 37
    TRUE    shift, and go to state 38
    FALSE   shift, and go to state 39

    variavel        go to state 40
    Exp             go to state 61
    cmdChamadaFunc  go to state 42


State 33

   45 Exp: '-' . Exp

    '('     shift, and go to state 32
    '-'     shift, and go to state 33
    '!'     shift, and go to state 34
    NUMBER  shift, and go to state 35
    STRING  shift, and go to state 36
    ID      shift, and go to state 37
    TRUE    shift, and go to state 38
    FALSE   shift, and go to state 39

    variavel        go to state 40
    Exp             go to state 62
    cmdChamadaFunc  go to state 42


State 34

   46 Exp: '!' . Exp

    '('     shift, and go to state 32
    '-'     shift, and go to state 33
    '!'     shift, and go to state 34
    NUMBER  shift, and go to state 35
    STRING  shift, and go to state 36
    ID      shift, and go to state 37
    TRUE    shift, and go to state 38
    FALSE   shift, and go to state 39

    variavel        go to state 40
    Exp             go to state 63
    cmdChamadaFunc  go to state 42


State 35

   36 Exp: NUMBER .

    $default  reduce using rule 36 (Exp)


State 36

   39 Exp: STRING .

    $default  reduce using rule 39 (Exp)


State 37

   33 variavel: ID .
   34         | ID . '[' Exp ']'
  110 cmdChamadaFunc: ID . '(' ')'
  111               | ID . '(' listaExp ')'

    '('  shift, and go to state 64
    '['  shift, and go to state 65

    $default  reduce using rule 33 (variavel)


State 38

   37 Exp: TRUE .

    $default  reduce using rule 37 (Exp)


State 39

   38 Exp: FALSE .

    $default  reduce using rule 38 (Exp)


State 40

   35 Exp: variavel .

    $default  reduce using rule 35 (Exp)


State 41

   23 specVarSimplesIni: error '=' Exp .
   40 Exp: Exp . '+' Exp
   41    | Exp . '-' Exp
   42    | Exp . '*' Exp
   43    | Exp . '/' Exp
   44    | Exp . '%' Exp
   48    | Exp . '?' Exp ':' Exp
   49    | Exp . '<' Exp
   50    | Exp . "<=" Exp
   51    | Exp . '>' Exp
   52    | Exp . ">=" Exp
   53    | Exp . "==" Exp
   54    | Exp . "!=" Exp
   55    | Exp . "&&" Exp
   56    | Exp . "||" Exp

    '?'   shift, and go to state 66
    "||"  shift, and go to state 67
    "&&"  shift, and go to state 68
    "=="  shift, and go to state 69
    "!="  shift, and go to state 70
    '<'   shift, and go to state 71
    "<="  shift, and go to state 72
    '>'   shift, and go to state 73
    ">="  shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '%'   shift, and go to state 79

    $default  reduce using rule 23 (specVarSimplesIni)


State 42

   57 Exp: cmdChamadaFunc .

    $default  reduce using rule 57 (Exp)


State 43

   25 specVarArranjo: ID '[' error . ']'
   28 specVarArranjoIni: ID '[' error . ']' '=' '{' listaExp '}'

    ']'  shift, and go to state 80


State 44

   24 specVarArranjo: ID '[' NUMBER . ']'
   27 specVarArranjoIni: ID '[' NUMBER . ']' '=' '{' listaExp '}'
   30                  | ID '[' NUMBER . ']' '=' '{' error '}'

    ']'  shift, and go to state 81


State 45

   22 specVarSimplesIni: ID '=' error .

    $default  reduce using rule 22 (specVarSimplesIni)


State 46

   21 specVarSimplesIni: ID '=' Exp .
   40 Exp: Exp . '+' Exp
   41    | Exp . '-' Exp
   42    | Exp . '*' Exp
   43    | Exp . '/' Exp
   44    | Exp . '%' Exp
   48    | Exp . '?' Exp ':' Exp
   49    | Exp . '<' Exp
   50    | Exp . "<=" Exp
   51    | Exp . '>' Exp
   52    | Exp . ">=" Exp
   53    | Exp . "==" Exp
   54    | Exp . "!=" Exp
   55    | Exp . "&&" Exp
   56    | Exp . "||" Exp

    '?'   shift, and go to state 66
    "||"  shift, and go to state 67
    "&&"  shift, and go to state 68
    "=="  shift, and go to state 69
    "!="  shift, and go to state 70
    '<'   shift, and go to state 71
    "<="  shift, and go to state 72
    '>'   shift, and go to state 73
    ">="  shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '%'   shift, and go to state 79

    $default  reduce using rule 21 (specVarSimplesIni)


State 47

   13 listaSpecVars: listaSpecVars ',' specVar .

    $default  reduce using rule 13 (listaSpecVars)


State 48

    9 decVar: VAR listaSpecVars ':' error . ';'

    ';'  shift, and go to state 82


State 49

  114 type: INT .

    $default  reduce using rule 114 (type)


State 50

  116 type: BOOL .

    $default  reduce using rule 116 (type)


State 51

  115 type: STRING_TYPE .
  117     | STRING_TYPE . '[' NUMBER ']'

    '['  shift, and go to state 83

    $default  reduce using rule 115 (type)


State 52

    7 decVar: VAR listaSpecVars ':' type . ';'

    ';'  shift, and go to state 84


State 53

   60 decProc: DEF ID '(' error . ')' bloco
   63 decFunc: DEF ID '(' error . ')' type bloco

    ')'  shift, and go to state 85


State 54

   58 decProc: DEF ID '(' ')' . bloco
   61 decFunc: DEF ID '(' ')' . ':' type bloco

    '{'  shift, and go to state 86
    ':'  shift, and go to state 87

    bloco  go to state 88


State 55

   69 param: ID .
   70      | ID . '[' ']'

    '['  shift, and go to state 89

    $default  reduce using rule 69 (param)


State 56

   59 decProc: DEF ID '(' listaParam . ')' bloco
   62 decFunc: DEF ID '(' listaParam . ')' ':' type bloco
   65 listaParam: listaParam . ';' specParams

    ')'  shift, and go to state 90
    ';'  shift, and go to state 91


State 57

   64 listaParam: specParams .

    $default  reduce using rule 64 (listaParam)


State 58

   66 specParams: listaParams . ':' type
   68 listaParams: listaParams . ',' param

    ','  shift, and go to state 92
    ':'  shift, and go to state 93


State 59

   67 listaParams: param .

    $default  reduce using rule 67 (listaParams)


State 60

   26 specVarArranjo: error '[' NUMBER ']' .
   29 specVarArranjoIni: error '[' NUMBER ']' . '=' '{' listaExp '}'

    '='  shift, and go to state 94

    $default  reduce using rule 26 (specVarArranjo)


State 61

   40 Exp: Exp . '+' Exp
   41    | Exp . '-' Exp
   42    | Exp . '*' Exp
   43    | Exp . '/' Exp
   44    | Exp . '%' Exp
   47    | '(' Exp . ')'
   48    | Exp . '?' Exp ':' Exp
   49    | Exp . '<' Exp
   50    | Exp . "<=" Exp
   51    | Exp . '>' Exp
   52    | Exp . ">=" Exp
   53    | Exp . "==" Exp
   54    | Exp . "!=" Exp
   55    | Exp . "&&" Exp
   56    | Exp . "||" Exp

    ')'   shift, and go to state 95
    '?'   shift, and go to state 66
    "||"  shift, and go to state 67
    "&&"  shift, and go to state 68
    "=="  shift, and go to state 69
    "!="  shift, and go to state 70
    '<'   shift, and go to state 71
    "<="  shift, and go to state 72
    '>'   shift, and go to state 73
    ">="  shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '%'   shift, and go to state 79


State 62

   40 Exp: Exp . '+' Exp
   41    | Exp . '-' Exp
   42    | Exp . '*' Exp
   43    | Exp . '/' Exp
   44    | Exp . '%' Exp
   45    | '-' Exp .
   48    | Exp . '?' Exp ':' Exp
   49    | Exp . '<' Exp
   50    | Exp . "<=" Exp
   51    | Exp . '>' Exp
   52    | Exp . ">=" Exp
   53    | Exp . "==" Exp
   54    | Exp . "!=" Exp
   55    | Exp . "&&" Exp
   56    | Exp . "||" Exp

    $default  reduce using rule 45 (Exp)


State 63

   40 Exp: Exp . '+' Exp
   41    | Exp . '-' Exp
   42    | Exp . '*' Exp
   43    | Exp . '/' Exp
   44    | Exp . '%' Exp
   46    | '!' Exp .
   48    | Exp . '?' Exp ':' Exp
   49    | Exp . '<' Exp
   50    | Exp . "<=" Exp
   51    | Exp . '>' Exp
   52    | Exp . ">=" Exp
   53    | Exp . "==" Exp
   54    | Exp . "!=" Exp
   55    | Exp . "&&" Exp
   56    | Exp . "||" Exp

    $default  reduce using rule 46 (Exp)


State 64

  110 cmdChamadaFunc: ID '(' . ')'
  111               | ID '(' . listaExp ')'

    '('     shift, and go to state 32
    ')'     shift, and go to state 96
    '-'     shift, and go to state 33
    '!'     shift, and go to state 34
    NUMBER  shift, and go to state 35
    STRING  shift, and go to state 36
    ID      shift, and go to state 37
    TRUE    shift, and go to state 38
    FALSE   shift, and go to state 39

    listaExp        go to state 97
    variavel        go to state 40
    Exp             go to state 98
    cmdChamadaFunc  go to state 42


State 65

   34 variavel: ID '[' . Exp ']'

    '('     shift, and go to state 32
    '-'     shift, and go to state 33
    '!'     shift, and go to state 34
    NUMBER  shift, and go to state 35
    STRING  shift, and go to state 36
    ID      shift, and go to state 37
    TRUE    shift, and go to state 38
    FALSE   shift, and go to state 39

    variavel        go to state 40
    Exp             go to state 99
    cmdChamadaFunc  go to state 42


State 66

   48 Exp: Exp '?' . Exp ':' Exp

    '('     shift, and go to state 32
    '-'     shift, and go to state 33
    '!'     shift, and go to state 34
    NUMBER  shift, and go to state 35
    STRING  shift, and go to state 36
    ID      shift, and go to state 37
    TRUE    shift, and go to state 38
    FALSE   shift, and go to state 39

    variavel        go to state 40
    Exp             go to state 100
    cmdChamadaFunc  go to state 42


State 67

   56 Exp: Exp "||" . Exp

    '('     shift, and go to state 32
    '-'     shift, and go to state 33
    '!'     shift, and go to state 34
    NUMBER  shift, and go to state 35
    STRING  shift, and go to state 36
    ID      shift, and go to state 37
    TRUE    shift, and go to state 38
    FALSE   shift, and go to state 39

    variavel        go to state 40
    Exp             go to state 101
    cmdChamadaFunc  go to state 42


State 68

   55 Exp: Exp "&&" . Exp

    '('     shift, and go to state 32
    '-'     shift, and go to state 33
    '!'     shift, and go to state 34
    NUMBER  shift, and go to state 35
    STRING  shift, and go to state 36
    ID      shift, and go to state 37
    TRUE    shift, and go to state 38
    FALSE   shift, and go to state 39
